--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
 name: astrbot_plugin_ignore_at
-desc: 默认忽略@全体成员的消息，无视@机器人使用ignore_at_on打开，ignore_at_off关闭
-help: ignore_at_on打开拦截，ignore_at_off关闭拦截
-version: v1.2
+desc: 默认忽略@全体成员的消息，无视@机器人使用ignore_at_bot_on打开，ignore_at_bot_off关闭
+help: ignore_at_bot_on打开拦截，ignore_at_bot_off关闭拦截,ignore_at_all_on开启无视@全体成员功能,ignore_at_all_off关闭无视@全体成员功能	
+version: v1.3
 author: Cl_Fu
 repo: https://github.com/clfpwp/astrbot_plugin_ignore_at
